--- a/Website_for_Jokes/Jokewebsitecss.css
+++ b/Website_for_Jokes/Jokewebsitecss.css
@@ -6,7 +6,7 @@ p {color: blue;
 body{color: green;}
 body{margin:10px;}
 body {
-  background-image: url(img/Papyrus_scroll.jpg);
+  background-image: url(img/lancaster-yellow-swatch.jpg);
   background-repeat: repeat;
   background-size: auto;
   margin-left: 10px
